--- a/src/app/user/sign-up/sign-up.component.css
+++ b/src/app/user/sign-up/sign-up.component.css
@@ -1,53 +1,221 @@
-body {
-    background: #222;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://unsplash.it/1200/800/?random');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-fill-mode: rgba(0,0,0,0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .container {
-    background: white;
-    padding: 20px 25px;
-    border: 5px solid #26a69a;
-    width: 550px;
-    height: auto;
-    box-sizing: border-box;
-    position: relative;
-  }
-  .col.s6 > .btn {
-     width: 100%;
-  }
-  .gender-male,.gender-female {
-    display: inline-block;
-  }
-  .gender-female {
-    margin-left: 35px;
-  }
-  radio:required {
-    border-color: red;
-  }
-  .container {
-    animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
-  }
-  
-  @keyframes showUp {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transoform: scale(1);
-    }
-  }
-  .row {margin-bottom: 10px;}
-  
-  .ngl {
-    position: absolute;
-    top: -20px;
-    right: -20px;
-  }
-  
+* {
+  margin: 0;
+  padding: 0
+}
+
+html {
+  height: 100%
+}
+
+p {
+  color: grey
+}
+
+#heading {
+  text-transform: uppercase;
+  color: #4FC95D;
+  font-weight: normal
+}
+
+#msform {
+  text-align: center;
+  position: relative;
+  margin-top: 20px
+}
+
+#msform fieldset {
+  background: white;
+  border: 0 none;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  padding-bottom: 20px;
+  position: relative
+}
+
+.form-card {
+  text-align: left
+}
+
+#msform fieldset:not(:first-of-type) {
+  display: none
+}
+
+#msform input,
+#msform textarea {
+  padding: 8px 15px 8px 15px;
+  border: 1px solid #9A9A9A;
+  border-radius: 8px;
+  margin-bottom: 22px;
+  margin-top: 2px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: montserrat;
+  color: #4FC95D;
+  background-color:#ffffff;
+  font-size: 16px;
+  letter-spacing: 1px
+}
+
+#msform input:focus,
+#msform textarea:focus {
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: 1px solid #4FC95D;
+  outline-width: 0
+}
+
+#msform .action-button {
+  width: 100px;
+  background: #4FC95D;
+  font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 0px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 0px 10px 5px;
+  float: right
+}
+
+#msform .action-button:hover,
+#msform .action-button:focus {
+  background-color: #4FC95D
+}
+
+#msform .action-button-previous {
+  width: 100px;
+  background: #616161;
+  font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 0px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 5px 10px 0px;
+  float: right
+}
+
+#msform .action-button-previous:hover,
+#msform .action-button-previous:focus {
+  background-color: #000000
+}
+
+.card {
+  z-index: 0;
+  border: none;
+  position: relative;
+  margin-left: 43px;
+  margin-right: 25px;
+}
+
+.fs-title {
+  font-size: 25px;
+  color: #000000;
+  margin-bottom: 10px;
+  font-weight: normal;
+  text-align: left;
+  margin-right: -118px;
+}
+
+.purple-text {
+  color: gray;
+  font-weight: normal
+}
+
+.steps {
+  font-size: 25px;
+  color: gray;
+  margin-bottom: 10px;
+  font-weight: normal;
+  text-align: right
+}
+
+.fieldlabels {
+  color: gray;
+  text-align: left
+}
+
+#progressbar {
+  margin-bottom: 30px;
+  overflow: hidden;
+  color: lightgrey
+}
+
+#progressbar .active {
+  color: #4FC95D
+}
+
+#progressbar li {
+  list-style-type: none;
+  font-size: 15px;
+  width: 25%;
+  float: left;
+  position: relative;
+  font-weight: 400
+}
+
+#progressbar #account:before {
+  font-family: FontAwesome;
+  content: ""
+}
+
+#progressbar #personal:before {
+  font-family: FontAwesome;
+  content: ""
+}
+
+#progressbar #payment:before {
+  font-family: FontAwesome;
+  content: ""
+}
+
+#progressbar #confirm:before {
+  font-family: FontAwesome;
+  content: ""
+}
+
+#progressbar li:before {
+  width: 16px;
+  height: 22px;
+  line-height: 45px;
+  display: block;
+  font-size: 20px;
+  color: #ffffff;
+  background: lightgray;
+  border-radius: 50%;
+  margin: 14px auto 10px auto;
+  padding: 2px;
+}
+
+#progressbar li:after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: lightgray;
+  position: absolute;
+  left: 0;
+  top: 25px;
+  z-index: -1
+}
+
+#progressbar li.active:before,
+#progressbar li.active:after {
+  background: #4FC95D
+}
+
+.progress {
+  height: 20px
+}
+
+.progress-bar {
+  background-color: #4FC95D
+}
+
+.fit-image {
+  width: 100%;
+  object-fit: cover
+}
+
