--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,5 +1,33 @@
-.tabs .tab a:hover, .tabs .tab a.active {
-    background-color: #f8f8f0;
-    color: #9e9e9e;
+.navbar{
+    background-color: #3E5055;
+    margin-right: -17px;
+    height: 61px;
+    margin-left: 0px;
+    padding-left: 29px;
+    margin-top: -8px;
 }
+.form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: right;
+    margin-right: -72px;
+    margin-left: 0px;
+    padding-left: 155px;
+}
+
+.btn-outline-light:not(:disabled):not(.disabled).active {
+    color: #FFFFFF;
+    background-color: #3E5055;
+    border-color: #f8f9fa;
+}
+
+.btn-outline-light {
+    color: #FFFFFF;
+    background-color: transparent;
+    background-image: none;
+    border-color: #3E5055;
+}
+
+
+
 
