--- a/src/app/user/sign-in/sign-in.component.html
+++ b/src/app/user/sign-in/sign-in.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="isLoginError" class="red-text center error-message">
     <i class="material-icons">error</i>Incorrect username or password
 </div>
-<form #loginForm="ngForm" class="col s12 white">
+<form [formGroup]="loginForm" class="col s12 white">
     <div class="row">
         <div class="input-field col s12">
             <i class="material-icons prefix">account_circle</i>
-            <input type="text" [(ngModel)]="usuario.username" name="username" placeholder="Username">
+            <input type="text" formControlName="username" name="username" placeholder="Username">
         </div>
     </div>
 
     <div class="row">
         <div class="input-field col s12">
             <i class="material-icons prefix">vpn_key</i>
-            <input type="password" [(ngModel)]="usuario.password" name="password" placeholder="Password">
+            <input type="password" formControlName="password" name="password" placeholder="Password">
         </div>
     </div>
 
