--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="card-content">
+    <div class="row">
+        <router-outlet></router-outlet>
+    </div>
+</div>
