Progress bar front

--- a/src/app/user/sign-up/password/password.component.css
+++ b/src/app/user/sign-up/password/password.component.css
@@ -8,6 +8,7 @@
     background-color: #F6F6F6;
     color: #9A9A9A;
     margin-top: 4px;
+    margin-top: 0px;
 }
 
 .btn-info.disabled,
@@ -15,7 +16,12 @@
     color: #FFFFFF;
     background-color: #D1D1D1;
     border-color: #D1D1D1;
-    margin-left: 43px;
+    padding-left: 122px;
+    padding-right: 99px;
+    margin-left: 3px;
+    margin-top: -2px;
+    margin-bottom: -65px;
+    height: 30px;
 }
 
 .btn-info:not(:disabled):not(.disabled):active,
@@ -32,6 +38,9 @@
     color: #FFFFFF;
     background-color: #4FC95D;
     border-color: #4FC95D;
+    width: 288px;
+    margin-left: 3px;
+    margin-top: 22px;
 }
 
 .card {
@@ -44,9 +53,9 @@
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.45rem;
-    margin-left: 40px;
-    margin-right: 47px;
-    margin-top: 29px;
+    margin-left: 22px;
+    margin-right: 24px;
+    margin-top: 19px;
 }
 
 .card-body {
@@ -54,7 +63,7 @@
     padding: 1.25rem;
     margin-bottom: -6px;
     margin-top: -32px;
-    margin-left: -10px;
+    margin-left: -34px;
     margin-right: -9px;
 }
 
@@ -67,4 +76,56 @@ label {
     margin-bottom: 1rem;
     margin-left: -16px;
     margin-right: -16px;
+}
+
+.col-xs-11 {
+    width: 88.666667%;
+    margin-left: 15px;
+}
+
+.form-horizontal .form-group {
+    margin-right: -15px;
+    margin-left: -15px;
+    margin-top: 8px;
+}
+
+.alert {
+    padding: 15px;
+    padding-top: 6px;
+    padding-bottom: 5px;
+    margin-bottom: -4px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-danger {
+    color: #FFFFFF;
+    background-color: #FD0000;
+    font-size: 12px;
+    margin-top: 5px;
+    text-align: center;
+    height: -1px;
+}
+
+.ng-valid {
+    border-left: 5px solid #42a948;
+}
+
+.ng-invalid {
+    border-left: 5px solid #FD0000;
+}
+
+.row {
+    margin-right: -26px;
+    margin-left: 1px;
+}
+
+.col-xs-12 {
+    width: 104%;
+    margin-left: -11px;
+}
+
+.text-center {
+    text-align: center;
+    margin-top: -19px;
 }
