--- a/src/app/user/sign-up/personal/personal.component.css
+++ b/src/app/user/sign-up/personal/personal.component.css
@@ -2,7 +2,10 @@
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
-    margin: 124px 0 124px 0;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: -21px;
+    height: 706px;
 }
 
 .element.style {
@@ -10,15 +13,15 @@
 }
 
 .form-group {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     margin-right: -4px;
     margin-left: -4px;
-    margin-top: -2px;
+    margin-top: 4px;
 }
 
 * {
     line-height: 0.5;
-    margin-top: -1px;
+    margin-top: 2px;
 }
 
 .form-control:focus {
@@ -38,9 +41,12 @@
     color: #FFFFFF;
     background-color: #D1D1D1;
     border-color: #D1D1D1;
-    padding-left: 68px;
-    padding-right: 67px;
-    margin-top: 19px;
+    padding-left: 111px;
+    padding-right: 109px;
+    padding-top: 2px;
+    margin-left: -2px;
+    margin-top: -2px;
+    margin-bottom: -65px;
     height: 30px;
 }
 
@@ -60,8 +66,10 @@
     border-color: #4FC95D;
     padding-left: 68px;
     padding-right: 67px;
-    margin-top: 19px;
+    margin-top: 2px;
+    margin-bottom: -7px;
     height: 30px;
+    width: 288px;
 }
 
 .card {
@@ -74,8 +82,8 @@
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.45rem;
-    margin-left: 40px;
-    margin-right: 47px;
+    margin-left: 22px;
+    margin-right: 24px;
     margin-top: 29px;
 }
 
@@ -83,7 +91,8 @@
     flex: 1 1 auto;
     padding: 1.25rem;
     margin-bottom: -6px;
-    margin-left: -10px;
+    margin-top: -16px;
+    margin-left: -34px;
     margin-right: -9px;
 }
 
@@ -93,5 +102,47 @@ label {
 }
 
 .head {
-    margin-top: 12px;
+    margin-top: -24px;
+}
+
+.alert {
+    padding: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: -4px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+}
+
+.alert-danger {
+    color: #FFFFFF;
+    background-color: #FD0000;
+    font-size: 12px;
+    margin-top: 5px;
+    text-align: center;
+    height: -1px;
+}
+
+.ng-valid {
+    border-left: 5px solid #42a948;
+}
+
+.ng-invalid {
+    border-left: 5px solid #FD0000;
+}
+
+.col-xs-12 {
+    width: 104%;
+    margin-left: -11px;
+}
+
+.row {
+    margin-right: -19px;
+    margin-left: -5px;
+}
+
+.board {
+    box-sizing: border-box;
+    margin-bottom: 83px;
+    margin-top: 77px;
 }
