--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar justify-content-between">
     <form class="form-inline">
         <button class="btn btn-outline-light my-2 my-sm-0" routerLink='/login' routerLinkActive='active'>Login</button>
-        <button class="btn btn-outline-light my-2 my-sm-0" routerLink='/signup' routerLinkActive='active'>Efetuar login</button>
+        <button class="btn btn-outline-light my-2 my-sm-0" routerLink='/signup/personal' routerLinkActive='active'>Efetuar login</button>
     </form>
 </nav>
 
@@ -20,6 +20,6 @@
             <!-- End Content Area -->
         </div>
 
-        <pre>{{ formData | json }}</pre>
+        <!-- <pre>{{ formData | json }}</pre> -->
     </div>
 </section>
