--- a/src/app/user/sign-up/complement/complement.component.css
+++ b/src/app/user/sign-up/complement/complement.component.css
@@ -15,9 +15,11 @@
     color: #FFFFFF;
     background-color: #D1D1D1;
     border-color: #D1D1D1;
-    padding-left: 68px;
-    padding-right: 67px;
-    margin-top: 19px;
+    padding-left: 128px;
+    padding-right: 117px;
+    margin-left: 21px;
+    margin-top: -2px;
+    margin-bottom: -65px;
     height: 30px;
 }
 
@@ -27,18 +29,21 @@
     color: #fff;
     background-color: #4FC95D;
     border-color: #4FC95D;
-    margin-top: 19px;
+    padding-left: 128px;
+    padding-right: 117px;
+    margin-left: 21px;
+    margin-top: -2px;
+    margin-bottom: -65px;
     height: 30px;
 }
 
 .btn-info {
-    color: #FFFFFF;
+    color: #fff;
     background-color: #4FC95D;
     border-color: #4FC95D;
-    padding-left: 68px;
-    padding-right: 67px;
-    margin-top: 19px;
-    height: 30px;
+    width: 299px;
+    margin-left: 16px;
+    margin-top: 29px;
 }
 
 .card {
@@ -51,17 +56,17 @@
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.45rem;
-    margin-left: 40px;
-    margin-right: 47px;
-    margin-top: 29px;
+    margin-left: 22px;
+    margin-right: 24px;
+    margin-top: 19px;
 }
 
 .card-body {
     flex: 1 1 auto;
     padding: 1.25rem;
     margin-bottom: -6px;
-    margin-top: -32px;
-    margin-left: -10px;
+    margin-top: -36px;
+    margin-left: -36px;
     margin-right: -9px;
 }
 
@@ -71,5 +76,86 @@ label {
 }
 
 .head {
-    margin-top: 12px;
+    margin-top: -24px;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+    margin-right: -17px;
+    margin-left: -16px;
+    margin-top: 4px;
+}
+
+.row {
+    margin-right: -5px;
+    margin-left: 17px;
+}
+
+.col-xs-4 {
+    width: 27.333333%;
+    margin-left: 30px;
+    padding-left: 19px;
+}
+
+.col-xs-6 {
+    width: 55%;
+    padding-left: 0px;
+}
+
+.col-xs-12 {
+    width: 113%;
+    margin-left: -18px;
+}
+
+#uf {
+    margin-left: 0px;
+    height: 34px;
+    width: 79px;
+}
+
+.col-xs-12 {
+    width: 113%;
+    margin-left: -17px;
+}
+
+.col-xs-offset-1 {
+    margin-left: 5.333333%;
+    padding-right: 2px;
+}
+
+.ng-valid {
+    border-left: 5px solid #42a948;
+}
+
+.ng-invalid {
+    border-left: 5px solid #FD0000;
+}
+
+.alert {
+    padding: 15px;
+    padding-top: 7px;
+    padding-bottom: 20px;
+    margin-bottom: -4px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-danger {
+    color: #FFFFFF;
+    background-color: #FD0000;
+    font-size: 12px;
+    margin-top: 5px;
+    text-align: center;
+    height: 0px;
+}
+
+#alertCepUf {
+    margin-right: -95px;
+    margin-left: -31px;
+    height: 51px;
+}
+
+#cep {
+    margin-left: -31px;
+    width: 193px;
 }
