--- a/src/app/user/sign-up/complement/complement.component.html
+++ b/src/app/user/sign-up/complement/complement.component.html
@@ -1,56 +1,78 @@
 <h4 class="head text-center"><strong>{{title}}</strong></h4>
-<div class="card">
-    <div class="card-body">
+<div class="card-body">
 
-        <form #complementForm="ngForm" class="editForm" novalidate>
-            <div class="tab-pane active">
-                <br />
-                <div class='row'>
-                    <div class='col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10'>
-                        <div class="form-group">
-                            <label class="control-label" for="telefone">Telefone:</label>
-                            <input class="form-control input-md" #telefone="ngModel" required id="telefone" name="telefone" type="text" [(ngModel)]="complement.telefone">
-                            <!-- <div class="alert alert-danger" [hidden]="street.valid">Street Address is required</div> -->
-                        </div>
-                        <div class="row">
-                            <div class='col-xs-offset-1 col-xs-7 col-sm-offset-1 col-sm-3'>
-                                <div class="form-group">
-                                    <label class="control-label" for="cep">Cep:</label>
-                                    <input class="form-control input-md" #cep="ngModel" required id="cep" name="cep" type="text" [(ngModel)]="complement.cep">
-                                    <!-- <div class="alert alert-danger" [hidden]="cep.valid">cep is required</div> -->
+    <form #complementForm="ngForm" class="editForm" novalidate>
+        <div class="tab-pane active">
+            <br />
+            <div class="row">
+                <div class='col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10'>
+                    <div class="form-group">
+                        <label class="control-label" for="telefone">Telefone:</label>
+                        <input class="form-control input-md" #telefone="ngModel" required id="telefone" name="telefone" type="text" [(ngModel)]="complement.telefone">
+                        <div class="alert alert-danger" [hidden]="telefone.valid">*Campo telefone é obrigatório.</div>
+                    </div>
+                    <div class="row">
+                        <div class='col-xs-offset-1 col-xs-6 col-sm-offset-1 col-sm-6'>
+                            <div class="form-group">
+                                <label class="control-label" for="cep">Cep:</label>
+                                <input class="form-control input-md" #cep="ngModel" required id="cep" name="cep" type="text" [(ngModel)]="complement.cep">
+                                <div class="alert alert-danger" id="alertCepUf" [hidden]="cep.valid">*Este não é um CEP válido.<br> *O campo de UF é obrigatório.
                                 </div>
                             </div>
                         </div>
-
-                        <div class='col-xs-4 col-sm-offset-1 col-sm-3'>
+                        <div class='col-xs-4 col-sm-offset-1 col-sm-2'>
                             <div class="form-group">
                                 <label class="control-label" for="uf">UF:</label>
-                                <input class="form-control input-md" #uf="ngModel" required id="uf" name="uf" type="text" [(ngModel)]="complement.uf">
-                                <!-- <div class="alert alert-danger" [hidden]="uf.valid">uf is required</div> -->
+                                <select class="form-control input-md" #uf="ngModel" required id="uf" name="uf" type="text" [(ngModel)]="complement.uf">
+                                    <option value="AC"> AC</option>
+                                    <option value="AL">AL</option>
+                                    <option value="AP">AP</option>
+                                    <option value="AM">AM</option>
+                                    <option value="BA">AB</option>
+                                    <option value="CE">CE</option>
+                                    <option value="DF">DF</option>
+                                    <option value="ES">DF</option>
+                                    <option value="GO">GO</option>
+                                    <option value="MA">MA</option>
+                                    <option value="MT">MT</option>
+                                    <option value="MS">MS</option>
+                                    <option value="MG">MG</option>
+                                    <option value="PA">PA</option>
+                                    <option value="PB">PB</option>
+                                    <option value="PR">PR</option>
+                                    <option value="PE">PE</option>
+                                    <option value="PI">PI</option>
+                                    <option value="RJ">RJ</option>
+                                    <option value="RN">RN</option>
+                                    <option value="RS">RS</option>
+                                    <option value="RO">RO</option>
+                                    <option value="RR">RR</option>
+                                    <option value="SC">SC</option>
+                                    <option value="SP">SP</option>
+                                    <option value="SE">SE</option>
+                                    <option value="TO">TO</option>
+                                    </select>
                             </div>
+                            <div [hidden]="uf.valid"></div>
                         </div>
-
-                        <div class='col-xs-12 col-sm-4'>
-                            <div class="form-group">
-                                <label class="control-label" for="cidade">Cidade:</label>
-                                <input class="form-control input-md" #cidade="ngModel" required id="cidade" name="cidade" type="text" [(ngModel)]="complement.cidade">
-                                <!-- <div class="alert alert-danger" [hidden]="cidade.valid">cidade is required</div> -->
-                            </div>
-                        </div>
-
                     </div>
 
-                    <div class="form-group text-center">
-                        <button type="button" class="btn btn-outline-rounded btn-default" (click)="goToPrevious(complementForm)"> 
-                    <span style="margin-right:10px;" class="glyphicon glyphicon-arrow-left"></span> Previous
-                </button>
-                        <button type="button" class="btn btn-outline-rounded btn-info" [disabled]="!complementForm.valid" (click)="goToNext(complementForm)"> Next 
-                    <span style="margin-left:10px;" class="glyphicon glyphicon-arrow-right"></span>
-                </button>
+                    <div class='col-xs-12 col-sm-12'>
+                        <div class="form-group">
+                            <label class="control-label" for="cidade">Cidade:</label>
+                            <input class="form-control input-md" #cidade="ngModel" required id="cidade" name="cidade" type="text" [(ngModel)]="complement.cidade">
+                            <div class="alert alert-danger" [hidden]="cidade.valid">*Campo cidade é obrigatório.</div>
+                        </div>
                     </div>
+
                 </div>
-
             </div>
-        </form>
-    </div>
+
+            <div class="form-group text-center">
+                <button type="button" class="btn btn-outline-rounded btn-info" [disabled]="!complementForm.valid" (click)="goToNext(complementForm)"> Próximo 
+                </button>
+            </div>
+
+        </div>
+    </form>
 </div>
