--- a/src/app/user/sign-up/navbar/navbar.component.css
+++ b/src/app/user/sign-up/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0px -49px 0px 8px;
-    padding: 0 23px 0px 0px;
+    margin: 0 -31px 19px 4px;
+    padding: 1px 24px 0px 0px;
     font-size: 10px;
     margin-top: 8px;
 }
@@ -20,92 +20,6 @@ p {
     margin: 0 -84px 0 -99px;
 }
 
-#msform {
-    text-align: center;
-    position: relative;
-    margin-top: 8px
-}
-
-#msform fieldset {
-    background: white;
-    border: 0 none;
-    border-radius: 0.5rem;
-    box-sizing: border-box;
-    width: 100%;
-    margin: 0;
-    padding-bottom: 20px;
-    position: relative
-}
-
-.form-card {
-    text-align: left
-}
-
-#msform fieldset:not(:first-of-type) {
-    display: none
-}
-
-#msform input,
-#msform textarea {
-    padding: 8px 15px 8px 15px;
-    border: 1px solid #9A9A9A;
-    border-radius: 8px;
-    margin-bottom: 22px;
-    margin-top: 2px;
-    width: 100%;
-    box-sizing: border-box;
-    font-family: montserrat;
-    color: #4FC95D;
-    background-color: #ffffff;
-    font-size: 16px;
-    letter-spacing: 1px
-}
-
-#msform input:focus,
-#msform textarea:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: 1px solid #4FC95D;
-    outline-width: 0
-}
-
-#msform .action-button {
-    width: 100px;
-    background: #4FC95D;
-    font-weight: bold;
-    color: white;
-    border: 0 none;
-    border-radius: 0px;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 10px 0px 10px 5px;
-    float: right
-}
-
-#msform .action-button:hover,
-#msform .action-button:focus {
-    background-color: #4FC95D
-}
-
-#msform .action-button-previous {
-    width: 100px;
-    background: #616161;
-    font-weight: bold;
-    color: white;
-    border: 0 none;
-    border-radius: 0px;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 10px 5px 10px 0px;
-    float: right
-}
-
-#msform .action-button-previous:hover,
-#msform .action-button-previous:focus {
-    background-color: #000000
-}
-
 .card {
     z-index: 0;
     border: none;
@@ -113,20 +27,6 @@ p {
     margin-left: 57px;
     margin-right: 21px;
     background-color: #F6F6F6;
-}
-
-.fs-title {
-    font-size: 25px;
-    color: #000000;
-    margin-bottom: 10px;
-    font-weight: normal;
-    text-align: left;
-    margin-right: -118px;
-}
-
-.purple-text {
-    color: gray;
-    font-weight: normal
 }
 
 .steps {
@@ -137,124 +37,25 @@ p {
     text-align: right
 }
 
-.fieldlabels {
-    color: gray;
-    text-align: left
+#mytab #personal strong {
+    margin-left: 15px;
 }
 
-#progressbar {
-    margin-bottom: 30px;
-    overflow: hidden;
-    color: lightgrey;
-    margin-left: -14px;
-    margin-right: 34px;
+#mytab #complement strong {
+    margin-left: 1px;
 }
 
-#progressbar .active {
-    color: #4FC95D;
-    margin-right: -33px;
+#mytab #password strong {
+    margin-left: 19px;
 }
 
-#progressbar li {
-    list-style-type: none;
-    font-size: 11px;
-    width: 109px;
-    float: left;
-    position: relative;
-    font-weight: 400;
-    margin-left: -10px;
-    padding-right: 18px;
-    padding-left: 28px;
-}
-
-#progressbar #personal:before {
-    font-family: FontAwesome;
-    content: "";
-}
-
-#progressbar #complement:before {
-    font-family: FontAwesome;
-    content: "";
-    margin-left: 3px;
-}
-
-#progressbar #password:before {
-    font-family: FontAwesome;
-    content: "";
-    margin-left: 20px;
-}
-
-#progressbar #finalizar:before {
-    font-family: FontAwesome;
-    content: "";
-    margin-left: 38px;
-}
-
-#progressbar #personal strong {
-    margin-left: -47px;
-}
-
-#progressbar #complement strong {
-    margin-left: -37px;
-}
-
-#progressbar #password strong {
-    margin-left: -16px;
-}
-
-#progressbar #finalizar strong {
-    margin-left: -1px;
+#mytab #finalizar strong {
+    margin-left: 15px;
 }
 
 .round-tabs {
     padding-right: 9px;
     margin-right: 25px;
-}
-
-#progressbar li:before {
-    width: 23px;
-    height: 25px;
-    line-height: 45px;
-    display: block;
-    font-size: 20px;
-    color: #ffffff;
-    background: lightgray;
-    border-radius: 50%;
-    margin: 13px 13px 2px 0px;
-    padding: 11px;
-}
-
-#progressbar li:after {
-    content: '';
-    width: 100%;
-    height: 2px;
-    background: #D1D1D1;
-    position: absolute;
-    left: 0;
-    top: 25px;
-    z-index: -1;
-    padding-left: 26px;
-    margin-left: 6px;
-    padding-right: 23px;
-}
-
-#progressbar li.active:before {
-    background: #4FC95D;
-}
-
-#progressbar li.active:after {
-    background: #4FC95D !important;
-    margin-left: 0px;
-    margin-right: 6px;
-    padding-left: 65px;
-}
-
-.progress {
-    height: 20px
-}
-
-.progress-bar {
-    background-color: #4FC95D
 }
 
 .fit-image {
@@ -267,4 +68,84 @@ p {
     flex-wrap: wrap;
     margin-right: -61px;
     margin-left: 79px;
+}
+
+#status-buttons a.active span.round-tabs {
+    background: #4FC95D;
+    color: #ffffff;
+    margin-left: -1px;
+}
+
+span.round-tabs {
+    color: #ffffff;
+    border-bottom-color: transparent;
+    border: 2px solid #F6F6F6;
+    width: 35px;
+    height: 35px;
+    line-height: 39px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #D1D1D1;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 25px;
+    margin-top: -12px;
+    margin-left: -1px;
+}
+
+.glyphicon {
+    position: absolute;
+    top: 2px;
+    margin-left: 11px;
+}
+
+.nav-tabs {
+    border-bottom: 0px solid #ddd;
+    margin-right: 0px;
+    margin-left: -11px;
+    padding-right: initial;
+}
+
+.nav-tabs>li {
+    float: left;
+    margin-bottom: -1px;
+    padding-left: 4px;
+}
+
+.nav-tabs>li a:hover {
+    background: transparent;
+}
+
+.nav-tabs>li a {
+    margin-right: 35px;
+    margin-left: 15px;
+    width: 35px;
+    height: 34px;
+    line-height: 50px;
+    border-radius: 35px 36px;
+    margin-bottom: 8px;
+}
+
+.round-tabs {
+    padding-right: 32px;
+    margin-right: 0px;
+    margin-left: -8px;
+}
+
+.liner {
+    height: 2px;
+    background: #ddd;
+    position: absolute;
+    width: 59%;
+    margin: -186px auto;
+    left: -5px;
+    right: 0;
+    top: 45%;
+    z-index: 1;
+}
+
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
 }
