--- a/src/app/user/sign-up/navbar/navbar.component.html
+++ b/src/app/user/sign-up/navbar/navbar.component.html
@@ -1,44 +1,44 @@
-<div class="card" id="msform">
-    <div class="board-inner" id="status-buttons">
-        <ul class="nav nav-tabs" id="progressbar">
-            <div class="liner"></div>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-            <li class="active" id="personal"><strong>Pessoal</strong>
-                <a routerLink="/signup/personal" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" data-toggle="tab" title="personal">
-                    <span class="round-tabs one">
-                        <i class="glyphicon glyphicon-user"></i>
-                    </span>
-                </a>
-            </li>
+<div class="board-inner" id="status-buttons">
+    <ul *ngIf="isLoginRoute()" class="nav nav-tabs" id="mytab">
+        <div class="liner"></div>
 
-            <li id="complement" routerLinkActive="active"><strong>Complemento</strong>
-                <a routerLink="/signup/complement" data-toggle="tab" title="complement">
-                    <span class="round-tabs two">
-                        <i class="glyphicon glyphicon-tasks"></i>
-                    </span>
-                </a>
-            </li>
+        <li class="active" id="personal">
+            <a routerLink="/signup/personal" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" data-toggle="tab" title="personal">
+                <span class="round-tabs one">
+                    <i class="glyphicon glyphicon-user"></i>
+                </span>
+            </a>
+        </li>
 
-            <li id="password" routerLinkActive="active"><strong>Senha</strong>
-                <a routerLink="/signup/password" data-toggle="tab" title="password">
-                    <span class="round-tabs three">
-                        <i class="glyphicon glyphicon-home"></i>
-                    </span>
-                </a>
-            </li>
+        <li id="complement">
+            <a routerLink="/signup/complement" routerLinkActive="active" data-toggle="tab" title="complement">
+                <span class="round-tabs two">
+                    <i class="glyphicon glyphicon-tasks"></i>
+                </span>
+            </a>
+        </li>
 
-            <li id="finalizar" routerLinkActive="active"><strong>Finalizar</strong>
-                <a routerLink="/signup/finish" data-toggle="tab" title="finalizar">
-                    <span class="round-tabs four">
-                        <i class="glyphicon glyphicon-ok"></i>
-                    </span>
-                </a>
-            </li>
+        <li id="password">
+            <a routerLink="/signup/password" routerLinkActive="active" data-toggle="tab" title="password">
+                <span class="round-tabs three">
+                    <i class="glyphicon glyphicon-home"></i>
+                </span>
+            </a>
+        </li>
 
-        </ul>
-        <div class="clearfix"></div>
-    </div>
+        <li id="finalizar">
+            <a routerLink="/signup/finish" routerLinkActive="active" data-toggle="tab" title="finalizar">
+                <span class="round-tabs four">
+                    <i class="glyphicon glyphicon-ok"></i>
+                </span>
+            </a>
+        </li>
+
+    </ul>
 </div>
+<div class="clearfix"></div>
 
 <!-- Close the Splash screen -->
 <script src="content/js/loading-bars.js"></script>
