--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -11,9 +11,10 @@
     display: flex;
     flex-flow: row wrap;
     align-items: right;
-    margin-right: -72px;
+    margin-right: 46px;
     margin-left: 0px;
-    padding-left: 155px;
+    padding-left: 213px;
+    margin-bottom: -6px;
 }
 
 .btn-outline-light:not(:disabled):not(.disabled).active {
@@ -27,6 +28,8 @@
     background-color: transparent;
     background-image: none;
     border-color: #3E5055;
+    padding: 7px 9px;
+    font-size: 9px;
 }
 
 .container {
@@ -35,11 +38,11 @@
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: -7px;
+    margin-top: -54px;
 }
 
 .board {
     box-sizing: border-box;
     margin-bottom: 38px;
-    margin-top: 0px;
+    margin-top: 40px;
 }
