Alinhamento tela cadastro  e exclusão materialize

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
+        <a routerLink="/signup" class="brand-logo">Cadastrar novo usuario</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a>Logout</a></li>
         </ul>
