--- a/src/app/user/sign-in/sign-in.component.css
+++ b/src/app/user/sign-in/sign-in.component.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 1px 213px 138px 15px;
+    margin: 1px 213px 138px 15px;
     padding: 0;
 }
 
@@ -8,10 +8,16 @@
     font-size: 1.25rem;
     line-height: 1.5;
     border-radius: 0.3rem;
-    margin-left: -3px;
+    margin-left: 25px;
     margin-right: -87px;
     padding-right: 137px;
-    padding-left: 136px;
+    padding-left: 128px;
+}
+
+.form-control:focus {
+    border-color: #4FC95D;
+    outline: 0;
+    box-shadow: 0 0 0 0.01rem #4FC95D;
 }
 
 .form-check {
@@ -19,14 +25,8 @@
     display: block;
     padding-left: 1.25rem;
     margin-bottom: 23px;
-}
-
-.alert-danger {
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
-    margin-right: -77px;
-    text-align: center;
+    margin-right: -74px;
+    padding-left: 31px;
 }
 
 label {
@@ -37,8 +37,8 @@ label {
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -11px;
+    margin-right: -53px;
+    margin-left: 25px;
 }
 
 .card {
@@ -58,8 +58,9 @@ label {
 .card-body {
     flex: 1 1 auto;
     padding: 1.25rem;
-    margin-left: -6px;
-    margin-right: 18px;
+    margin-left: -33px;
+    margin-right: -39px;
+    width: 199px;
 }
 
 .form-group {
@@ -72,3 +73,38 @@ label {
     margin-right: -69px;
 }
 
+.form-control {
+    display: block;
+    width: 76%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+}
+
+.ng-valid {
+    border-left: 5px solid #42a948;
+}
+
+.ng-invalid {
+    border-left: 5px solid #FD0000;
+}
+
+.alert {
+    padding: 15px;
+    padding-top: 7px;
+    padding-bottom: 20px;
+    margin-bottom: -4px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-danger {
+    color: #FFFFFF;
+    background-color: #FD0000;
+    font-size: 12px;
+    margin-top: 5px;
+    text-align: center;
+    height: 0px;
+    width: 296px;
+    margin-right: 94px;
+}
