--- a/src/app/user/sign-up/personal/personal.component.css
+++ b/src/app/user/sign-up/personal/personal.component.css
@@ -4,8 +4,9 @@
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: -21px;
+    margin-top: -49px;
     height: 706px;
+    padding-bottom: 19px;
 }
 
 .element.style {
