--- a/src/app/security/sign-up/password/password.component.css
+++ b/src/app/security/sign-up/password/password.component.css
@@ -7,8 +7,17 @@
 .form-control {
     background-color: #F6F6F6;
     color: #9A9A9A;
-    margin-top: 4px;
-    margin-top: 0px;
+    width: 289px;
+    height: 48px;
+    border: 1px solid #9A9A9A;
+    border-radius: 6px;
+    opacity: 1;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+    margin-left: -16px;
+    margin-right: -16px;
 }
 
 .btn-info.disabled,
@@ -72,15 +81,20 @@ label {
     margin-bottom: -0.5rem;
 }
 
-.form-group {
-    margin-bottom: 1rem;
-    margin-left: -16px;
-    margin-right: -16px;
+.col-xs-offset-1 {
+    margin-left: 54px;
+    padding-right: 2px;
+    margin-top: 14px;
 }
 
 .col-xs-11 {
     width: 88.666667%;
     margin-left: 15px;
+}
+
+.col-xs-12 {
+    width: 104%;
+    margin-left: -11px;
 }
 
 .form-horizontal .form-group {
@@ -91,8 +105,8 @@ label {
 
 .alert {
     padding: 15px;
-    padding-top: 6px;
-    padding-bottom: 5px;
+    padding-top: 7px;
+    padding-bottom: 20px;
     margin-bottom: -4px;
     border: 1px solid transparent;
     border-radius: 4px;
@@ -103,8 +117,9 @@ label {
     background-color: #FD0000;
     font-size: 12px;
     margin-top: 5px;
+    margin-right: 40px;
     text-align: center;
-    height: -1px;
+    height: 0px;
 }
 
 .ng-valid {
@@ -120,12 +135,12 @@ label {
     margin-left: 1px;
 }
 
-.col-xs-12 {
-    width: 104%;
-    margin-left: -11px;
-}
-
 .text-center {
     text-align: center;
     margin-top: -19px;
+}
+
+.head {
+    margin-top: -20px;
+    font-size: 26px;
 }
