--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,19 +3,21 @@
     width: 140%;
     height: 61px;
 }
+
 ul {
     position: absolute;
     top: 20px;
-    right: 0;
-    list-style:none;
+    right: -10px;
+    list-style: none;
 }
 
 ul li {
     display: inline;
     margin-right: 20px;
 }
+
 .btn-header {
-    text-decoration:none;
+    text-decoration: none;
     width: 88px;
     height: 24px;
     font: Regular 16px/21px Roboto;
@@ -23,8 +25,9 @@ ul li {
     color: #FFFFFF;
     opacity: 1;
 }
+
 .btn-header-active {
-    text-decoration:none;
+    text-decoration: none;
     padding-left: 40px;
     padding-bottom: 9px;
     padding-right: 40px;
