--- a/src/app/security/sign-up/complement/complement.component.css
+++ b/src/app/security/sign-up/complement/complement.component.css
@@ -7,7 +7,11 @@
 .form-control {
     background-color: #F6F6F6;
     color: #9A9A9A;
-    margin-top: 4px;
+    width: 289px;
+    height: 48px;
+    border: 1px solid #9A9A9A;
+    border-radius: 6px;
+    opacity: 1;
 }
 
 .btn-info.disabled,
@@ -15,12 +19,10 @@
     color: #FFFFFF;
     background-color: #D1D1D1;
     border-color: #D1D1D1;
-    padding-left: 128px;
-    padding-right: 117px;
-    margin-left: 21px;
-    margin-top: -2px;
     margin-bottom: -65px;
     height: 30px;
+    margin-left: 35px;
+    width: 288px;
 }
 
 .btn-info:not(:disabled):not(.disabled):active,
@@ -41,8 +43,8 @@
     color: #fff;
     background-color: #4FC95D;
     border-color: #4FC95D;
-    width: 299px;
-    margin-left: 16px;
+    width: 290px;
+    margin-left: 36px;
     margin-top: 29px;
 }
 
@@ -72,11 +74,12 @@
 
 label {
     display: inline-block;
-    margin-bottom: -0.5rem;
+    margin-bottom: -3.5rem;
 }
 
 .head {
-    margin-top: -24px;
+    margin-top: -20px;
+    font-size: 26px;
 }
 
 .form-group {
@@ -88,29 +91,20 @@ label {
 
 .row {
     margin-right: -5px;
-    margin-left: 17px;
+    margin-left: -22px;
 }
 
 .col-xs-4 {
     width: 27.333333%;
     margin-left: 30px;
     padding-left: 19px;
+    margin-top: 14px;
+    padding-top: 0px;
 }
 
 .col-xs-6 {
-    width: 55%;
+    width: 90px;
     padding-left: 0px;
-}
-
-.col-xs-12 {
-    width: 113%;
-    margin-left: -18px;
-}
-
-#uf {
-    margin-left: 0px;
-    height: 34px;
-    width: 79px;
 }
 
 .col-xs-12 {
@@ -119,8 +113,9 @@ label {
 }
 
 .col-xs-offset-1 {
-    margin-left: 5.333333%;
+    margin-left: 54px;
     padding-right: 2px;
+    margin-top: 14px;
 }
 
 .ng-valid {
@@ -145,14 +140,21 @@ label {
     background-color: #FD0000;
     font-size: 12px;
     margin-top: 5px;
+    margin-right: 26px;
     text-align: center;
     height: 0px;
 }
 
+#uf {
+    margin-left: 39px;
+    height: 48px;
+    width: 79px;
+}
+
 #alertCepUf {
-    margin-right: -95px;
-    margin-left: -31px;
     height: 51px;
+    width: 286px;
+    margin-left: -31px;
 }
 
 #cep {
