--- a/src/app/security/sign-up/complement/complement.component.html
+++ b/src/app/security/sign-up/complement/complement.component.html
@@ -4,7 +4,7 @@
     <form #complementForm="ngForm" class="editForm" novalidate>
         <div class="tab-pane active">
             <br />
-            <div class="row">
+            <div class="conteiner">
                 <div class='col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10'>
                     <div class="form-group">
                         <label class="control-label" for="telefone">Telefone:</label>
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class='col-xs-offset-1 col-xs-6 col-sm-offset-1 col-sm-6'>
                             <div class="form-group">
-                                <label class="control-label" for="cep">Cep:</label>
+                                <label class="control-label" id="cep" for="cep">Cep:</label>
                                 <input class="form-control input-md" #cep="ngModel" required id="cep" name="cep" type="text" [(ngModel)]="complement.cep">
                                 <div class="alert alert-danger" id="alertCepUf" [hidden]="cep.valid">*Este não é um CEP válido.<br> *O campo de UF é obrigatório.
                                 </div>
@@ -22,7 +22,7 @@
                         </div>
                         <div class='col-xs-4 col-sm-offset-1 col-sm-2'>
                             <div class="form-group">
-                                <label class="control-label" for="uf">UF:</label>
+                                <label class="control-label" id="uf" for="uf">UF:</label>
                                 <select class="form-control input-md" #uf="ngModel" required id="uf" name="uf" type="text" [(ngModel)]="complement.uf">
                                     <option value="AC"> AC</option>
                                     <option value="AL">AL</option>
@@ -57,12 +57,10 @@
                         </div>
                     </div>
 
-                    <div class='col-xs-12 col-sm-12'>
-                        <div class="form-group">
-                            <label class="control-label" for="cidade">Cidade:</label>
-                            <input class="form-control input-md" #cidade="ngModel" required id="cidade" name="cidade" type="text" [(ngModel)]="complement.cidade">
-                            <div class="alert alert-danger" [hidden]="cidade.valid">*Campo cidade é obrigatório.</div>
-                        </div>
+                    <div class="form-group">
+                        <label class="control-label" for="cidade">Cidade:</label>
+                        <input class="form-control input-md" #cidade="ngModel" required id="cidade" name="cidade" type="text" [(ngModel)]="complement.cidade">
+                        <div class="alert alert-danger" [hidden]="cidade.valid">*Campo cidade é obrigatório.</div>
                     </div>
 
                 </div>
