--- a/src/app/security/sign-up/navbar/navbar.component.html
+++ b/src/app/security/sign-up/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <li id="complement">
             <a routerLink="/signup/complement" routerLinkActive="active" data-toggle="tab" title="complement">
                 <span class="round-tabs two">
-                    <i class="glyphicon glyphicon-tasks"></i>
+                        <i class="glyphicon glyphicon-home"></i>
                 </span>
             </a>
         </li>
@@ -23,7 +23,7 @@
         <li id="password">
             <a routerLink="/signup/password" routerLinkActive="active" data-toggle="tab" title="password">
                 <span class="round-tabs three">
-                    <i class="glyphicon glyphicon-home"></i>
+                     <i class="glyphicon glyphicon-lock"></i>
                 </span>
             </a>
         </li>
