--- a/src/app/security/sign-up/personal/personal.component.css
+++ b/src/app/security/sign-up/personal/personal.component.css
@@ -1,149 +1,306 @@
-.container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: -49px;
-    height: 706px;
-    padding-bottom: 19px;
+/* Telefones em paisagem e abaixo */
+
+@media (max-width: 360px) {
+    .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: -49px;
+        height: 706px;
+        padding-bottom: 19px;
+    }
+    .element.style {
+        margin: 0px -15px 0 0;
+    }
+    .form-group {
+        margin-bottom: 2rem;
+        margin-right: -4px;
+        margin-left: -4px;
+        margin-top: 4px;
+    }
+    * {
+        line-height: 0.5;
+        margin-top: 2px;
+    }
+    .form-control:focus {
+        border-color: #4FC95D;
+        outline: 0;
+        box-shadow: 0 0 0 0.01rem #4FC95D;
+    }
+    .form-control {
+        background-color: #F6F6F6;
+        color: #9A9A9A;
+        width: 289px;
+        height: 48px;
+        border: 1px solid #9A9A9A;
+        border-radius: 6px;
+        opacity: 1;
+        margin-top: 5px;
+    }
+    .btn-info.disabled,
+    .btn-info:disabled {
+        color: #FFFFFF;
+        background-color: #D1D1D1;
+        border-color: #D1D1D1;
+        padding-left: 110px;
+        padding-right: 109px;
+        padding-top: 2px;
+        margin-left: -5px;
+        margin-top: -2px;
+        margin-bottom: -65px;
+        height: 30px;
+    }
+    .btn-info:not(:disabled):not(.disabled):active,
+    .btn-info:not(:disabled):not(.disabled).active,
+    .show>.btn-info.dropdown-toggle {
+        color: #fff;
+        background-color: #4FC95D;
+        border-color: #4FC95D;
+        margin-top: 19px;
+        height: 30px;
+    }
+    .btn-info {
+        color: #FFFFFF;
+        background-color: #4FC95D;
+        border-color: #4FC95D;
+        padding-left: 68px;
+        padding-right: 67px;
+        margin-top: 2px;
+        margin-bottom: -7px;
+        height: 30px;
+        width: 288px;
+    }
+    .card {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        word-wrap: break-word;
+        background-color: #F6F6F6;
+        background-clip: border-box;
+        border: 1px solid rgba(0, 0, 0, 0.125);
+        border-radius: 0.45rem;
+        margin-left: 22px;
+        margin-right: 24px;
+        margin-top: 29px;
+    }
+    .card-body {
+        flex: 1 1 auto;
+        padding: 1.25rem;
+        margin-bottom: -6px;
+        margin-top: -16px;
+        margin-left: -34px;
+        margin-right: -9px;
+    }
+    label {
+        display: inline-block;
+        margin-bottom: -0.5rem;
+    }
+    .head {
+        margin-top: -20px;
+        font-size: 26px;
+    }
+    .alert {
+        padding: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-bottom: -4px;
+        border: 1px solid transparent;
+        border-radius: 5px;
+    }
+    .alert-danger {
+        color: #FFFFFF;
+        background-color: #FD0000;
+        font-size: 13px;
+        margin-top: 5px;
+        margin-right: 9px;
+        text-align: center;
+        height: -1px;
+    }
+    .ng-valid {
+        border-left: 5px solid #42a948;
+    }
+    .ng-invalid:not(form) {
+        border-left: 5px solid #FD0000;
+    }
+    .col-xs-offset-1 {
+        margin-left: 45px;
+        margin-top: 14px;
+    }
+    .col-xs-12 {
+        width: 104%;
+        margin-left: -11px;
+    }
+    .row {
+        margin-right: -19px;
+        margin-left: -5px;
+    }
+    .board {
+        box-sizing: border-box;
+        margin-bottom: 83px;
+        margin-top: 77px;
+    }
 }
 
-.element.style {
-    margin: 0px -15px 0 0;
+
+/* Telefones em paisagem a tablet em retrato */
+
+@media (max-width: 767px) {
+    .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: -49px;
+        height: 706px;
+        padding-bottom: 19px;
+    }
+    .element.style {
+        margin: 0px -15px 0 0;
+    }
+    .form-group {
+        margin-bottom: 2rem;
+        margin-right: -4px;
+        margin-left: -4px;
+        margin-top: 4px;
+    }
+    * {
+        line-height: 0.5;
+        margin-top: 2px;
+    }
+    .form-control:focus {
+        border-color: #4FC95D;
+        outline: 0;
+        box-shadow: 0 0 0 0.01rem #4FC95D;
+    }
+    .form-control {
+        background-color: #F6F6F6;
+        color: #9A9A9A;
+        width: 289px;
+        height: 48px;
+        border: 1px solid #9A9A9A;
+        border-radius: 6px;
+        opacity: 1;
+        margin-top: 5px;
+    }
+    .btn-info.disabled,
+    .btn-info:disabled {
+        color: #FFFFFF;
+        background-color: #D1D1D1;
+        border-color: #D1D1D1;
+        padding-left: 110px;
+        padding-right: 109px;
+        padding-top: 2px;
+        margin-left: -5px;
+        margin-top: -2px;
+        margin-bottom: -65px;
+        height: 30px;
+    }
+    .btn-info:not(:disabled):not(.disabled):active,
+    .btn-info:not(:disabled):not(.disabled).active,
+    .show>.btn-info.dropdown-toggle {
+        color: #fff;
+        background-color: #4FC95D;
+        border-color: #4FC95D;
+        margin-top: 19px;
+        height: 30px;
+    }
+    .btn-info {
+        color: #FFFFFF;
+        background-color: #4FC95D;
+        border-color: #4FC95D;
+        padding-left: 68px;
+        padding-right: 67px;
+        margin-top: 2px;
+        margin-bottom: -7px;
+        height: 30px;
+        width: 288px;
+    }
+    .card {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        word-wrap: break-word;
+        background-color: #F6F6F6;
+        background-clip: border-box;
+        border: 1px solid rgba(0, 0, 0, 0.125);
+        border-radius: 0.45rem;
+        margin-left: 22px;
+        margin-right: 24px;
+        margin-top: 29px;
+    }
+    .card-body {
+        flex: 1 1 auto;
+        padding: 1.25rem;
+        margin-bottom: -6px;
+        margin-top: -16px;
+        margin-left: -34px;
+        margin-right: -9px;
+    }
+    label {
+        display: inline-block;
+        margin-bottom: -0.5rem;
+    }
+    .head {
+        margin-top: -20px;
+        font-size: 26px;
+    }
+    .alert {
+        padding: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-bottom: -4px;
+        border: 1px solid transparent;
+        border-radius: 5px;
+    }
+    .alert-danger {
+        color: #FFFFFF;
+        background-color: #FD0000;
+        font-size: 13px;
+        margin-top: 5px;
+        margin-right: 9px;
+        text-align: center;
+        height: -1px;
+    }
+    .ng-valid {
+        border-left: 5px solid #42a948;
+    }
+    .ng-invalid:not(form) {
+        border-left: 5px solid #FD0000;
+    }
+    .col-xs-offset-1 {
+        margin-left: 45px;
+        margin-top: 14px;
+    }
+    .col-xs-12 {
+        width: 104%;
+        margin-left: -11px;
+    }
+    .row {
+        margin-right: -19px;
+        margin-left: -5px;
+    }
+    .board {
+        box-sizing: border-box;
+        margin-bottom: 83px;
+        margin-top: 77px;
+    }
 }
 
-.form-group {
-    margin-bottom: 2rem;
-    margin-right: -4px;
-    margin-left: -4px;
-    margin-top: 4px;
+
+/* Tablet em retrato a paisagem e desktop */
+
+@media (min-width: 768px) and (max-width: 979px) {
+    /* estilos aqui */
 }
 
-* {
-    line-height: 0.5;
-    margin-top: 2px;
-}
 
-.form-control:focus {
-    border-color: #4FC95D;
-    outline: 0;
-    box-shadow: 0 0 0 0.01rem #4FC95D;
-}
+/* Desktop grande */
 
-.form-control {
-    background-color: #F6F6F6;
-    color: #9A9A9A;
-    margin-top: 4px;
-}
-
-.btn-info.disabled,
-.btn-info:disabled {
-    color: #FFFFFF;
-    background-color: #D1D1D1;
-    border-color: #D1D1D1;
-    padding-left: 111px;
-    padding-right: 109px;
-    padding-top: 2px;
-    margin-left: -2px;
-    margin-top: -2px;
-    margin-bottom: -65px;
-    height: 30px;
-}
-
-.btn-info:not(:disabled):not(.disabled):active,
-.btn-info:not(:disabled):not(.disabled).active,
-.show>.btn-info.dropdown-toggle {
-    color: #fff;
-    background-color: #4FC95D;
-    border-color: #4FC95D;
-    margin-top: 19px;
-    height: 30px;
-}
-
-.btn-info {
-    color: #FFFFFF;
-    background-color: #4FC95D;
-    border-color: #4FC95D;
-    padding-left: 68px;
-    padding-right: 67px;
-    margin-top: 2px;
-    margin-bottom: -7px;
-    height: 30px;
-    width: 288px;
-}
-
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #F6F6F6;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.45rem;
-    margin-left: 22px;
-    margin-right: 24px;
-    margin-top: 29px;
-}
-
-.card-body {
-    flex: 1 1 auto;
-    padding: 1.25rem;
-    margin-bottom: -6px;
-    margin-top: -16px;
-    margin-left: -34px;
-    margin-right: -9px;
-}
-
-label {
-    display: inline-block;
-    margin-bottom: -0.5rem;
-}
-
-.head {
-    margin-top: -24px;
-}
-
-.alert {
-    padding: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: -4px;
-    border: 1px solid transparent;
-    border-radius: 5px;
-}
-
-.alert-danger {
-    color: #FFFFFF;
-    background-color: #FD0000;
-    font-size: 12px;
-    margin-top: 5px;
-    text-align: center;
-    height: -1px;
-}
-
-.ng-valid {
-    border-left: 5px solid #42a948;
-}
-
-.ng-invalid {
-    border-left: 5px solid #FD0000;
-}
-
-.col-xs-12 {
-    width: 104%;
-    margin-left: -11px;
-}
-
-.row {
-    margin-right: -19px;
-    margin-left: -5px;
-}
-
-.board {
-    box-sizing: border-box;
-    margin-bottom: 83px;
-    margin-top: 77px;
+@media (min-width: 1200px) {
+    /* estilos aqui */
 }
