--- a/src/app/security/sign-up/personal/personal.component.html
+++ b/src/app/security/sign-up/personal/personal.component.html
@@ -3,14 +3,15 @@
     <form #personalForm="ngForm" class="editForm" id="msform" novalidate>
         <div class="tab-pane active">
             <br />
-            <div class="row">
+            <div class="conteiner">
                 <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
                             <div class="form-group">
                                 <label class="control-label" for="nome">Nome:</label>
                                 <input class="form-control input-md" #nome="ngModel" required id="nome" name="nome" type="text" [(ngModel)]="personal.nome">
-                                <div class="alert alert-danger" [hidden]="nome.valid">*O campo nome é obrigatório.
+                                <div *ngIf="personal.nome === null">
+                                    <div class="alert alert-danger" [hidden]="nome.valid">*O campo nome é obrigatório.</div>
                                 </div>
                             </div>
                         </div>
