--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<app-header></app-header>
-<div class="card-content">
-    <div class="row">
+<main>
+    <header>
+        <app-header></app-header>    
+    </header>
+    <section>
         <router-outlet></router-outlet>
-    </div>
-</div>
+    </section>
+    <footer></footer>
+</main>
