--- a/src/app/security/sign-in/sign-in.component.html
+++ b/src/app/security/sign-in/sign-in.component.html
@@ -2,7 +2,7 @@
     Usuário ou senha incorreto!
 </div>
 <div class="container">
-    <div class="conatiner-header-login">
+    <div class="container-header-login">
         <h3 class="text-login">
             <strong>Efetue o login!</strong>
         </h3>
