--- a/src/app/security/sign-up/navbar/navbar.component.css
+++ b/src/app/security/sign-up/navbar/navbar.component.css
@@ -2,10 +2,11 @@
 
 @media (min-width: 360px) {
     * {
-        margin: 0 -31px 19px 4px;
-        padding: 1px 24px 0px 0px;
+        margin: -7%;
+        margin-right: auto;
+        margin-left: auto;
         font-size: 10px;
-        margin-top: 8px;
+        margin-top: 18px;
     }
     html {
         height: 100%
@@ -85,30 +86,28 @@
     }
     .glyphicon {
         position: absolute;
-        top: 2px;
+        top: -7px;
         margin-left: 11px;
     }
     .nav-tabs {
         border-bottom: 0px solid #ddd;
-        margin-top: -32px;
         padding-right: initial;
         margin-right: auto;
         margin-left: auto;
         margin-top: -29px;
-        padding-right: initial;
         width: 90%;
     }
     .nav-tabs>li {
         float: left;
         margin-bottom: -1px;
-        padding-right: 22px;
+        padding-right: 7px;
     }
     .nav-tabs>li a:hover {
         background: transparent;
     }
     .nav-tabs>li a {
-        margin-right: 35px;
-        margin-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
         width: 35px;
         height: 34px;
         line-height: 50px;
