--- a/src/app/security/sign-up/password/password.component.css
+++ b/src/app/security/sign-up/password/password.component.css
@@ -14,21 +14,13 @@
     opacity: 1;
 }
 
-.form-group {
-    margin-bottom: 1rem;
-    margin-left: -16px;
-    margin-right: -16px;
-}
-
 .btn-info.disabled,
 .btn-info:disabled {
     color: #FFFFFF;
     background-color: #D1D1D1;
     border-color: #D1D1D1;
-    padding-left: 122px;
-    padding-right: 99px;
-    margin-left: 3px;
-    margin-top: -2px;
+    margin-left: -31px;
+    margin-top: auto;
     margin-bottom: -65px;
     height: 30px;
 }
@@ -67,24 +59,16 @@
     margin-top: 19px;
 }
 
-.card-body {
-    flex: 1 1 auto;
-    padding: 1.25rem;
-    margin-bottom: -6px;
-    margin-top: -32px;
-    margin-left: -34px;
-    margin-right: -9px;
-}
-
 label {
     display: inline-block;
     margin-bottom: -0.5rem;
 }
 
-.col-xs-offset-1 {
-    margin-left: 54px;
-    padding-right: 2px;
-    margin-top: 14px;
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    margin: 4%;
+    margin-top: -21px;
 }
 
 .col-xs-11 {
@@ -94,13 +78,11 @@ label {
 
 .col-xs-12 {
     width: 104%;
-    margin-left: -11px;
 }
 
 .form-horizontal .form-group {
-    margin-right: -15px;
-    margin-left: -15px;
     margin-top: 8px;
+    padding-left: 24px;
 }
 
 .alert {
@@ -117,9 +99,9 @@ label {
     background-color: #FD0000;
     font-size: 12px;
     margin-top: 5px;
-    margin-right: 40px;
     text-align: center;
     height: 0px;
+    width: 289px;
 }
 
 .ng-valid {
@@ -130,17 +112,12 @@ label {
     border-left: 5px solid #FD0000;
 }
 
-.row {
-    margin-right: -26px;
-    margin-left: 1px;
-}
-
 .text-center {
     text-align: center;
     margin-top: -19px;
 }
 
 .head {
-    margin-top: -20px;
+    margin-top: 51px;
     font-size: 26px;
 }
