--- a/src/app/security/sign-up/personal/personal.component.css
+++ b/src/app/security/sign-up/personal/personal.component.css
@@ -16,9 +16,10 @@
     }
     .form-group {
         margin-bottom: 2rem;
-        margin-right: -4px;
-        margin-left: -4px;
-        margin-top: 4px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: 8px;
+        padding-left: inherit;
     }
     * {
         line-height: 0.5;
@@ -44,10 +45,8 @@
         color: #FFFFFF;
         background-color: #D1D1D1;
         border-color: #D1D1D1;
-        padding-left: 110px;
-        padding-right: 109px;
         padding-top: 2px;
-        margin-left: -5px;
+        margin-left: auto;
         margin-top: -2px;
         margin-bottom: -65px;
         height: 30px;
@@ -65,8 +64,7 @@
         color: #FFFFFF;
         background-color: #4FC95D;
         border-color: #4FC95D;
-        padding-left: 68px;
-        padding-right: 67px;
+        margin-left: 6px;
         margin-top: 2px;
         margin-bottom: -7px;
         height: 30px;
@@ -86,20 +84,12 @@
         margin-right: 24px;
         margin-top: 29px;
     }
-    .card-body {
-        flex: 1 1 auto;
-        padding: 1.25rem;
-        margin-bottom: -6px;
-        margin-top: -16px;
-        margin-left: -34px;
-        margin-right: -9px;
-    }
     label {
         display: inline-block;
         margin-bottom: -0.5rem;
     }
     .head {
-        margin-top: -20px;
+        margin-top: 51px;
         font-size: 26px;
     }
     .alert {
@@ -115,7 +105,7 @@
         background-color: #FD0000;
         font-size: 13px;
         margin-top: 5px;
-        margin-right: 9px;
+        margin-right: 15px;
         text-align: center;
         height: -1px;
     }
@@ -129,23 +119,25 @@
         margin-left: 45px;
         margin-top: 14px;
     }
-    .col-xs-12 {
-        width: 104%;
-        margin-left: -11px;
-    }
     .row {
-        margin-right: -19px;
-        margin-left: -5px;
+        margin-right: auto;
+        margin-left: auto;
     }
     .board {
         box-sizing: border-box;
         margin-bottom: 83px;
         margin-top: 77px;
     }
+    .content {
+        margin-left: auto;
+        margin-right: auto;
+        margin: 4%;
+        margin-top: -23px;
+    }
 }
 
 
-/* Telefones em paisagem a tablet em retrato */
+/* Telefones em paisagem a tablet em retrato
 
 @media (max-width: 767px) {
     .container {
