Construindo tela de cadastro com responsividade e alteração header para components de login e cadastro apenas.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
         <li><a class="btn-header" routerLink="/login" routerLinkActive='btn-header-active'>Entrar</a></li>
-        <li><a class="btn-header" routerLink="/signup/personal" routerLinkActive='btn-header-active'>Criar conta</a></li>
+        <li><a class="btn-header" routerLink="/signup/cadastroPessoal" routerLinkActive='btn-header-active'>Criar conta</a></li>
     </ul>
 </nav>
