--- a/src/app/security/sign-in/sign-in.component.css
+++ b/src/app/security/sign-in/sign-in.component.css
@@ -7,6 +7,31 @@
     font-family: "Segoe UI";
     src: url('../../../assets/fonts/segoe-ui.otf');
 }
+
+
+main {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 61px 1fr 50px;
+  grid-template-areas:
+      'navegacao'
+      'conteudo'
+      'rodape';
+}
+header {
+  grid-area: navegacao;
+  background-color: #3E5055;
+}
+section {
+  grid-area: conteudo;
+
+}
+footer {
+  grid-area: rodape;
+  margin-bottom: 0px;;
+}
+
 .container {
     width: 100%;
     padding: 0;
@@ -189,14 +214,14 @@ label {
         border: 3px solid #D1D1D1;
         border-radius: 12px;
     }
-    .form-group { 
+    .form-group {
         display: flex;
         flex-direction: column;
         margin-left: auto;
         margin-right: auto;
     }
 
-    .form-group label { 
+    .form-group label {
         margin-bottom: 0px;
     }
 
@@ -230,5 +255,5 @@ label {
 
 /* On screens that are 992px or less, set the background color to blue */
 @media screen and (min-width: 1079px) {
-    
+
 }
