--- a/src/app/perfil/perfil/perfil.component.html
+++ b/src/app/perfil/perfil/perfil.component.html
@@ -5,6 +5,9 @@
     </div>
   </header>
   <aside class="barra-lateral-perfil">
+    <app-descricao-perfil></app-descricao-perfil>
+    <app-links-perfil></app-links-perfil>
+    <app-sair-perfil></app-sair-perfil>
   </aside>
   <section class="dados-perfil">
   </section>
