--- a/src/app/perfil/links-perfil/links-perfil.component.html
+++ b/src/app/perfil/links-perfil/links-perfil.component.html
@@ -2,16 +2,16 @@
   <div class="label">
     Perfil
   </div>
-  <a id="configuracao">Configuração da conta</a>
+  <app-link title="Configuração da conta"></app-link>
 
   <div class="label">
     Produtos
   </div>
-  <a id="store">Store</a>
-  <a id="equipamentos">Equipamentos</a>
+  <app-link title="Store"></app-link>
+  <app-link title="Equipamentos"></app-link>
 
   <div class="label">
     Notificações
   </div>
-  <a id="atualizacoes">Atualizacoes</a>
+  <app-link title="Atualizações"></app-link>
 </div>
