--- a/src/app/perfil/descricao-perfil/descricao-perfil.component.html
+++ b/src/app/perfil/descricao-perfil/descricao-perfil.component.html
@@ -1,4 +1,5 @@
 <div class="card-perfil">
-  <img src="http://lorempixel.com/400/200" />
-  oi
+  <img src="/assets/images.png" />
+  <p class="nome">Júlio Rebouças</p>
+  <p class="permissao">Administrador</p>
 </div>
